--- a/RobotWarStyle.css
+++ b/RobotWarStyle.css
@@ -64,18 +64,73 @@
 	width: 600px;
 	height: 500px;
 	/*background: #cccccc;*/
-	border: solid 1px black;
-	background-image: url("Img/Military Background 1.jpg");
+	border: solid 0px black;
+	background-image: url("Img/middleSide.png");
 	background-size: 100% 100%;
 }
 
+#topSideCourt
+{
+	position: absolute;
+	left: 80px;
+	top: 81px;
+	width: 630px;
+	height: 20px;
+	/*background: #cccccc;*/
+	/*border: solid 0px 1px 0px 0px black;*/
+	border-top: solid 1px black;
+	background-image: url("Img/topSide.png");
+	background-size: 100% 100%;
+}
+
+#bottomSideCourt
+{
+	position: absolute;
+	left: 80px;
+	top: 595px;
+	width: 630px;
+	height: 20px;
+	/*background: #cccccc;*/
+	/*border: solid 1px 0px 1px 1px black*/;
+	border-bottom: solid 1px black;
+	background-image: url("Img/bottomSide.png");
+	background-size: 100% 100%;
+}
+
+#leftSideCourt
+{
+	position: absolute;
+	left: 80px;
+	top: 81px;
+	width: 20px;
+	height: 530px;
+	/*background: #cccccc;*/
+	border-left: solid 1px black;
+	/*border: solid 1px black;*/
+	background-image: url("Img/leftSide.png");
+	background-size: 100% 100%;
+}
+
+#rightSideCourt
+{
+	position: absolute;
+	left: 690px;
+	top: 81px;
+	width: 20px;
+	height: 535px;
+	/*background: #cccccc;*/
+	/*border: solid 1px black;*/
+	border-right: solid 1px black;
+	background-image: url("Img/rightSide.png");
+	background-size: 100% 100%;
+}
 
 #headCourt
 {
 	position: absolute;
-	left: 100px;
-	top: 50px;
-	width: 600px;
+	left: 80px;
+	top: 30px;
+	width: 630px;
 	height: 50px;
 	background: #cccccc;
 	border: solid 1px black;
